<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.inventoryapp.ui.main.HomeFragment"
        android:label="@string/nav_home">
        <action
            android:id="@+id/action_home_to_scanner"
            app:destination="@id/scannerFragment" />
        <action
            android:id="@+id/action_home_to_products"
            app:destination="@id/productsListFragment" />
        <action
            android:id="@+id/action_home_to_packages"
            app:destination="@id/packageListFragment" />
        <action
            android:id="@+id/action_home_to_templates"
            app:destination="@id/templatesFragment" />
        <action
            android:id="@+id/action_home_to_export_import"
            app:destination="@id/exportImportFragment" />
        <action
            android:id="@+id/action_home_to_contractors"
            app:destination="@id/contractorsFragment" />
    </fragment>

    <fragment
        android:id="@+id/scannerFragment"
        android:name="com.example.inventoryapp.ui.scanner.ScannerFragment"
        android:label="@string/scanner_title" />

    <fragment
        android:id="@+id/productsListFragment"
        android:name="com.example.inventoryapp.ui.products.ProductsListFragment"
        android:label="@string/nav_products">
        <action
            android:id="@+id/action_products_to_add_product"
            app:destination="@id/addProductFragment" />
        <action
            android:id="@+id/action_products_to_product_details"
            app:destination="@id/productDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/addProductFragment"
        android:name="com.example.inventoryapp.ui.products.AddProductFragment"
        android:label="@string/product_add" />

    <fragment
        android:id="@+id/productDetailsFragment"
        android:name="com.example.inventoryapp.ui.products.ProductDetailsFragment"
        android:label="@string/product_details">
        <argument
            android:name="productId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/packageListFragment"
        android:name="com.example.inventoryapp.ui.packages.PackageListFragment"
        android:label="@string/nav_packages">
        <action
            android:id="@+id/action_packages_to_package_details"
            app:destination="@id/packageDetailsFragment" />
        <action
            android:id="@+id/action_packages_to_add_package"
            app:destination="@id/addPackageFragment" />
    </fragment>
    
    <fragment
        android:id="@+id/addPackageFragment"
        android:name="com.example.inventoryapp.ui.packages.AddPackageFragment"
        android:label="Add Package" />

    <fragment
        android:id="@+id/packageDetailsFragment"
        android:name="com.example.inventoryapp.ui.packages.PackageDetailsFragment"
        android:label="@string/package_details">
        <argument
            android:name="packageId"
            app:argType="long" />
        <action
            android:id="@+id/action_package_details_to_product_selection"
            app:destination="@id/productSelectionFragment" />
        <action
            android:id="@+id/action_package_details_to_add_product_to_package"
            app:destination="@id/addProductToPackageFragment" />
    </fragment>
    
    <fragment
        android:id="@+id/addProductToPackageFragment"
        android:name="com.example.inventoryapp.ui.packages.AddProductToPackageFragment"
        android:label="Add Product to Package">
        <argument
            android:name="packageId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/productSelectionFragment"
        android:name="com.example.inventoryapp.ui.packages.ProductSelectionFragment"
        android:label="Add Products">
        <argument
            android:name="packageId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/templatesFragment"
        android:name="com.example.inventoryapp.ui.templates.TemplatesFragment"
        android:label="Templates">
        <action
            android:id="@+id/action_templates_to_template_details"
            app:destination="@id/templateDetailsFragment" />
        <action
            android:id="@+id/action_templates_to_add_template"
            app:destination="@id/addTemplateFragment" />
    </fragment>
    
    <fragment
        android:id="@+id/addTemplateFragment"
        android:name="com.example.inventoryapp.ui.templates.AddTemplateFragment"
        android:label="Add Template" />

    <fragment
        android:id="@+id/templateDetailsFragment"
        android:name="com.example.inventoryapp.ui.templates.TemplateDetailsFragment"
        android:label="Template Details">
        <argument
            android:name="templateId"
            app:argType="long" />
        <action
            android:id="@+id/action_template_details_to_bulk_scan"
            app:destination="@id/bulkProductScanFragment" />
    </fragment>

    <fragment
        android:id="@+id/bulkProductScanFragment"
        android:name="com.example.inventoryapp.ui.templates.BulkProductScanFragment"
        android:label="Bulk Scan">
        <argument
            android:name="templateId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/exportImportFragment"
        android:name="com.example.inventoryapp.ui.tools.ExportImportFragment"
        android:label="Export / Import">
        <action
            android:id="@+id/action_export_import_to_import_preview"
            app:destination="@+id/importPreviewFragment" />
    </fragment>

    <fragment
        android:id="@+id/importPreviewFragment"
        android:name="com.example.inventoryapp.ui.tools.ImportPreviewFragment"
        android:label="Import Preview" />

    <fragment
        android:id="@+id/contractorsFragment"
        android:name="com.example.inventoryapp.ui.contractors.ContractorsFragment"
        android:label="Contractors">
        <action
            android:id="@+id/action_contractors_to_add_contractor"
            app:destination="@id/addContractorFragment" />
        <action
            android:id="@+id/action_contractors_to_edit_contractor"
            app:destination="@id/editContractorFragment" />
    </fragment>

    <fragment
        android:id="@+id/addContractorFragment"
        android:name="com.example.inventoryapp.ui.contractors.AddContractorFragment"
        android:label="Add Contractor" />
        
    <fragment
        android:id="@+id/editContractorFragment"
        android:name="com.example.inventoryapp.ui.contractors.EditContractorFragment"
        android:label="Edit Contractor">
        <argument
            android:name="contractorId"
            app:argType="long" />
    </fragment>

</navigation>
